feat: wget cliente con profundidad, pool, hosts